# raspberry-pi-ai-assistant

./: .gitignore  CLAUDE.md  README.md  config.example.toml  mic_check.py  mic_probe.py  pixel_face_prototype_v2.html  pixel_face_prototype_v3.html  pyproject.toml  requirements.txt  run.py  speaker_probe.py
.claude/: CLAUDE.md
assistant/: __init__.py  audio_io.py  brain.py  eyes.py  intent.py  pipeline.py  scheduler.py  state.py  store.py  stt.py  tts.py  ui.py
config/: laptop.yaml  pi.yaml
src/assistant/: bus.py  config.py  enroll.py  main.py  nightjob.py  paths.py
src/assistant/face/: __init__.py  logic.py  module.py  render.py  styles.py
src/assistant/memory/: __init__.py  db.py  people.py
src/assistant/perception/: __init__.py  camera.py  identity.py  logic.py  module.py  vision.py
src/assistant/voice/: logic.py  module.py  stt.py  tts.py  vad.py
tests/: test_brain.py  test_bus.py  test_eyes.py  test_face_logic.py  test_intent.py  test_perception_identity.py  test_perception_logic.py  test_pipeline.py  test_tts_level.py  test_ui.py  test_voice_logic.py
