[project]
name = "raspberry-pi-ai-assitant"
version = "0.1.0"
description = "Desk companion robot with an animated pixel face, spoken conversation, and a persistent inner life"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pygame>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
assistant = "assistant.main:run"
assistant-enroll = "assistant.enroll:run"
assistant-nightjob = "assistant.nightjob:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
